Infy/Infosys/force-app/main/default/objects/CSV_Field_Mapping__mdt/CSV_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>CSV Field Mapping</label>
    <pluralLabel>CSV Field Mappings</pluralLabel>
</CustomObject>