Infy/Infosys/force-app/main/default/objects/CSV_Field_Mapping__mdt/fields/CSV_Column__c.field-meta.xml
<CustomField>
    <fullName>CSV_Column__c</fullName>
    <description>The name of the column in the CSV file</description>
    <label>CSV Column</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>