Infy/Infosys/force-app/main/default/objects/CSV_Field_Mapping__mdt/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the field is required for the WorkOrder record</description>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>