Infy/Infosys/force-app/main/default/objects/CSV_Field_Mapping__mdt/fields/Workorder_Field__c.field-meta.xml
<CustomField>
    <fullName>Workorder_Field__c</fullName>
    <description>The API name of the Workorder field that corresponds to the CSV column</description>
    <label>Workorder Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>